--- a/index.html
+++ b/index.html
@@ -382,6 +382,12 @@
     </div>
 
   </div>
+
+  <!-- Footer -->
+  <div class="footer">
+    <div class="footer-text">© <span class="footer-year">2026</span> · Curated & Designed by <span class="footer-credit">Prateek Dutta</span></div>
+    <div class="footer-text">RLM + Agentic RAG System Architecture</div>
+  </div>
 </div>
 </body>
 <script src="script.js"></script>
